# RSM3034H

./: .gitignore  README.md  _brand.yml.bkp  index.html  main.py  pyproject.toml
_output/lecture01/: cross-section.html  lecture_01.html
_output/lecture02/: lecture_02.html
_output/lecture03/: lecture_03.html  macro_risk_premium.html
_output/lecture04/: lecture_04.html  variance_ratio_momentum.html
_output/lecture05/: lecture_05.html  replication.html
claude/: example.md
conf/: config.yaml
ideas/: assignment_idea.md  exam_questions.md  topics_brainstorm.md
latex/: results.aux  results.fdb_latexmk  results.fls  results.tex
lecture01/: cross-section.qmd  lecture_01.qmd
lecture02/: event_studies.qmd  lecture_02.qmd
lecture02/version_00/: Lecture_Notes2.md
lecture03/: lecture_03.qmd
lecture04/: create_efficiency_forms.py  lecture_04.qmd  time_series.qmd
lecture05/: lecture_05.qmd  replication.qmd
lecture05/data/: ff_beta_sorted_portfolios.xlsx
lecture_slides/: _quarto.yml  custom.scss  lit.bib
lecture_slides/lecture01/: cross-section.qmd
main_code/data/: __init__.py  (+3 more)
results_tables/: ea_regression.tex  news_predictor_large_stocks_raw_ret_results.tex  news_predictor_large_stocks_results.tex  news_predictor_raw_ret_results.tex  news_predictor_results.tex  news_predictor_small_stocks_raw_ret_results.tex  news_predictor_small_stocks_results.tex  oos_r2_exmkt_vrp.tex  reg_insample_exmkt_vrp.tex  reg_insample_exmkt_vrp_pre2020.tex  reg_outofsample_exmkt_vrp.tex  reg_outofsample_exmkt_vrp_pre2020.tex  summary_stats_table.tex
tmp/: test.py
(+163 files in other folders)
